# copt

./: +  .gitignore  fwht_test.py  jax_test.py  lambda_env.sh  main.py  mixer.fdb_latexmk  mixer.fls  pyproject.toml  torch_qaoa.py  torch_test.py
copt/: fwht.py  jax_test.py  objects.py  qaoa.py
doc/: main.bib  main.tex
doc/.ltex/: ltex.dictionary.en-US.txt  ltex.hiddenFalsePositives.en-US.txt
doc/graphics/: cqaoa.tex  mixer.tex  probability.tex  qaoa.tex  qpe.tex
