[tool.poetry]
name = "copt"
version = "0.1.0"
description = ""
authors = ["David Bucher <d.bucher97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
torch = "^1.13.1"
hadamard-transform = "^0.1.3"
tqdm = "^4.65.0"
jax = {extras = ["cpu"], version = "^0.4.5"}
optax = "^0.1.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
